fix backward compatibility